samples/_failures_safe/1761509983_a5c7ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80cf9b80.c: In function ‘main’:
./samples/SAFE/__tmp_80cf9b80.c:114:5: error: expected expression at end of input
  114 |     if (!
      |     ^~
./samples/SAFE/__tmp_80cf9b80.c:114:5: error: expected declaration or statement at end of input
